--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome, [Her Name]!</h1>
+        <h1>Welcome,[ sneha]!</h1>
         <p>Click the button below to continue.</p>
         <button onclick="location.href='proposal.html'">Continue</button>
     </div>
